# nu-age-frontend

./: .env  .gitignore  Nu Age.spec  README.md  landing.py  lms_local.db  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  main.yml
src/: .env  Login.py  chat_view.py  course_analytics.py  course_builder.py  course_page.py  course_settings.py  course_stats.py  course_view.py  courses.py  create_course.py  dashboard.py  edit_profile.py  invite_members.py  member_invite_view.py  member_profile.py  network.py  org_view.py  profile.py  self_study.py  signup.py
src/components/: bottom_appbar.py  completed_card  completed_card.py  course_card.py  dashboard_card.py  enrolled_card.py  landing_navbar.py
src/requests/: Courses.py  auth.py  chats.py  enrollments.py  networks.py  organisations.py  study.py  subscription.py
src/utils/: db_manager.py
