[project]
name = "nu-front"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Oluwatobiloba Davies", email = "daviestobi3@gmail.com" }
]
dependencies = [
    "flet>=0.84.0",
    "flet-video>=0.84.0",
    "flet-charts>=0.84.0",  
    "httpx>=0.28.1",
    "requests>=2.33.1",
    "certifi>=2026.2.25",
    "charset-normalizer>=3.4.7",
    "websockets>=16.0", 
    "idna>=3.11",
    "urllib3>=2.6.3",
]
[dependency-groups]
dev = [
    "flet-cli>=0.84.0",
    "flet-desktop>=0.84.0",
    "flet-web>=0.84.0",
]

[tool.flet]
org = "com.mycompany"
product = "Nu Age"      
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "."
bundle_id = "com.mycompany.nuage"

[tool.flet.windows]
file_description = "Nu Age"
product_name = "Nu Age"
company_name = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"